--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>${revision}</version>
 	<packaging>pom</packaging>
 	<name>Spring Boot Build</name>
-	<description>Spring Boot Build</description>
+	<description>Spring Boot Buildaa</description>
 	<properties>
 		<revision>2.1.0.BUILD-SNAPSHOT</revision>
 		<main.basedir>${basedir}</main.basedir>
